--- a/public/index.html
+++ b/public/index.html
@@ -23,9 +23,10 @@
     -->
 
   <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-    integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous" />
-
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"/>
+  <!-- Font Awesome Icons -->
+  <script src="https://kit.fontawesome.com/7d18e30bff.js" crossorigin="anonymous"></script>
+  
   <title>MovieDB API</title>
 </head>
 
